--- a/style.css
+++ b/style.css
@@ -1,47 +1,80 @@
-.container-1 {
-  background-color: #000000;
-  margin: 0;
-  padding: 0;
+* {
+  background-color: #fff5ee;
 }
 
 .meu-portfolio {
-  padding-right: 65%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  width: 70%;
 }
 
-.meu-portfolio,
-h3 {
-  color: #ffffff;
-  font-family: Arial, Helvetica, sans-serif;
+.meu-portfolio h1 {
+  font-family: 'Nunito', sans-serif;
+  font-size: 50px;
   font-style: bold;
-  text-align: justify;
+  color: #000000;
+  text-align: center;
 }
 
-#destaque {
-  color: #22D4FD;
+.meu-portfolio h1>span {
+  font-family: 'Nunito', sans-serif;
+  color: #9147FF;
+  font-size: 60px;
+  font-weight: 900px;
 }
 
-.meu-portfolio>p {
-  font-family: Arial, Helvetica, sans-serif;
+.meu-portfolio p {
+  font-family: 'Nunito', sans-serif;
   font-style: normal;
-  font-weight: 200;
-  font-size: 16px;
+  font-weight: 100;
+  font-size: 20px;
   line-height: 26px;
-  color: #F6F6F6;
+  color: #000000;
   text-align: justify;
+  margin-top: 10px;
+  line-height: 30px;
+}
+
+.meu-portfolio h2 {
+  font-family: 'Nunito', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 30px;
+}
+
+.img-ana {
+  width: 150px;
+  height: 150px;
+  border-radius: 100px;
+  border: 1px solid #9147FF;
+  padding: 5px;
+  margin-top: 150px;
+  margin-left: 40%;
 }
 
 .button-ig,
 .button-git {
-  background: #22D4FD;
-  border-radius: 6px;
-  padding: 15px;
+  font-family: 'Nunito', sans-serif;
+  background-color: #9147FF;
+  border-radius: 80px;
+  padding: 10px 20px 10px 20px;
   cursor: pointer;
   color: #ffffff;
   border: none;
   font-size: 16px;
+  margin-bottom: 40px;
 }
 
 .button-ig:hover,
 .button-git:hover {
-  color: black;
+  color: #000000;
+}
+
+.contato {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
